# glitchcat

./: Cargo.toml  LICENSE  README.md
modes/: Default.txt
src/: duration.rs  homoglyph.rs  homoglyphs.txt  main.rs  percent.rs
