[package]
name = "glitchcat"
description = "cat-like program with glitch-like animation"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
license = "MIT"
repository = "https://github.com/kuviman/glitchcat"

[dependencies]
console = "0.6"
rand = "0.5"
structopt = "0.2"
strum = "0.10"
strum_macros = "0.10"